--- a/style.css
+++ b/style.css
@@ -17,9 +17,11 @@ h1 {
 .flex {
   display: flex;
   align-items: center;
+  margin: 0 auto;
   margin-bottom: 20px;
   flex-wrap: wrap;
   justify-content: center;
+  
 }
 .kokuban {
   width: 50%;
@@ -54,7 +56,7 @@ textarea {
 }
 
 .table {
-  width: 20%;
+  width: 200px;
   height: 180px;
   padding: 1rem;
   background-position: top;
