--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 h1 {
   font-size: 1.5rem;
-  margin-bottom: 8px;
 }
 
 .container {
@@ -21,23 +20,25 @@ h1 {
   margin-bottom: 20px;
   flex-wrap: wrap;
   justify-content: center;
-  
 }
 .kokuban {
   width: 50%;
-  height: 240px;
+  height: 270px;
   padding: 16px 0;
   background-position: center;
   background-image: url(./kyoushitsu.png);
   background-size: contain;
   background-repeat: no-repeat;
 }
+.kokuban > * {
+  margin-bottom: 8px;
+}
 input,
 textarea,
 button {
   padding: 4px;
   border-radius: 4px;
-  margin-bottom: 4px;
+  /* margin-bottom: 4px; */
 }
 button {
   display: block;
@@ -45,20 +46,39 @@ button {
   border: 0;
   margin: 20px;
   font-size: 1.2rem;
-  padding: 12px;
+  padding: 12px 16px;
   border-radius: 12px;
+  box-shadow: 2px 2px 4px #ccc;
+  transition: all 0.3s;
+}
+button:hover {
+  opacity: 0.8;
 }
 input,
 textarea {
   background-color: transparent;
   color: #fff;
   resize: none;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 0;
+  font-size: 14px;
+}
+input:focus,
+textarea:focus {
+  outline: 0;
+}
+input {
+  border-bottom: 1pt solid #fff;
+}
+textarea {
+  border-left: 2pt dashed #fff;
 }
 
 .table {
   width: 200px;
   height: 180px;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
